tests/test_scope/bad/output/scope.catala_en.A.Interpret
[ERROR] There is a conflict between multiple valid consequences for assigning the same variable.

This consequence has a valid justification:
  --> tests/test_scope/bad/scope.catala_en
   | 
13 |   definition b under condition not c consequence equals 1337
   |                                                         ^^^^
   + Article

This consequence has a valid justification:
  --> tests/test_scope/bad/scope.catala_en
   | 
14 |   definition b under condition not c consequence equals 0
   |                                                         ^
   + Article
